# src/app/api/docs/swagger.yaml
@@ -37,6 +37,21 @@ definitions:
       field_name:
         type: string
     type: object
+  response.SongDTO:
+    properties:
+      album_id:
+        type: string
+      artist_id:
+        type: string
+      duration:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      release_date:
+        type: string
+    type: object
 info:
   contact:
     email: evs10@aluno.ifal.edu.br
@@ -79,6 +94,49 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorMessage'
       summary: Buscar todos os artistas do banco
+      tags:
+      - Rotas do usuário
+  /artists/{artistID}/songs:
+    get:
+      description: Rota que permite que se busque todas as músicas de um artista
+      operationId: GetArtistSongs
+      parameters:
+      - default: cfd8b073-a303-4886-836a-f249e88be9bc
+        description: ID da organização.
+        in: path
+        name: artistID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Requisição realizada com sucesso.
+          schema:
+            items:
+              $ref: '#/definitions/response.SongDTO'
+            type: array
+        "401":
+          description: Usuário não autorizado.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+        "403":
+          description: Acesso negado.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+        "422":
+          description: Algum dado informado não pôde ser processado.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+        "500":
+          description: Ocorreu um erro inesperado.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+        "503":
+          description: A base de dados não está disponível.
+          schema:
+            $ref: '#/definitions/response.ErrorMessage'
+      summary: Buscar todas as músicas de um artista específico
       tags:
       - Rotas do usuário
   /auth/login:
