# src/app/api/endpoints/routes/artist.go
@@ -10,4 +10,5 @@ func loadArtistRoutes(group *echo.Group) {
 	artistHandlers := dicontainer.GetArtistHandlers()
 
 	group.GET("/artists", artistHandlers.GetArtists)
+	group.GET("/artists/:artistID/songs", artistHandlers.GetArtistSongs)
 }
